prepare files for nodeDetail content of the tabs

--- a/public/admin-lte/css/app.css
+++ b/public/admin-lte/css/app.css
@@ -551,7 +551,7 @@ ul.dropdown-menu.course{
     background: #3C8DBC !important;
 }
 .red {
-    background: #db4865 !important;
+    background: cadetblue !important;
 }
 
 .content-header.red>.breadcrumb>li+li:before{
