--- a/views/admin-lte/catalogs/actionBarNode.ejs
+++ b/views/admin-lte/catalogs/actionBarNode.ejs
@@ -11,6 +11,7 @@
         </li>
     </ul>
 </script>
+
 <script type="text/ng-template" id="actionBar-node-analytics">
     <ul class="">
         <li>
@@ -21,15 +22,25 @@
         </li>
     </ul>
 </script>
+
 <script type="text/ng-template" id="actionBar-node-map">
     <ul class="">
     </ul>
 </script>
+
 <script type="text/ng-template" id="actionBar-node-external-resources">
     <ul class="">
         <a style="cursor: pointer"
            data-toggle="modal" data-target="#addBookmark"
            title="Add External Resource">
             <i class="ionicons ion-edit"></i> &nbsp; ADD</a>
+    </ul>
+</script>
+
+<script type="text/ng-template" id="actionBar-node-update">
+    <ul class="">
+        <a style="cursor: pointer"
+           title="Add External Resource">
+            <i class="ionicons ion-edit"></i> &nbsp; FILTER</a>
     </ul>
 </script>
