proper query path and added parser to parse url query

--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -1,9 +1,9 @@
 <section class="content-header action-header red">
     <!-- breadcrumb 2nd row -->
     <ol class="breadcrumb">
-        <li class="home"><a href="#/cid/{{course._id}}?map&center={{nodeId}}"> &leftarrow;Back &nbsp;&nbsp; {{course.name}}</a></li>
+        <li class="home"><a href="#/cid/{{course._id}}?tab=map&center={{nodeId}}"> &leftarrow;Back &nbsp;&nbsp; {{course.name}}</a></li>
         <li>Content Node</li>
-        <li class="home"><a href="#/cid/{{course._id}}/nid/{{nodeId}}?preview">{{treeNode.name}}</a></li>
+        <li class="home"><a href="#/cid/{{course._id}}/nid/{{nodeId}}?tab=preview">{{treeNode.name}}</a></li>
         <li class="active">{{currentTab}}</li>
     </ol>
     <!-- breadcrumb 2nd row -->
