--- a/views/admin-lte/catalogs/courseDetailContentMap.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentMap.ejs
@@ -46,7 +46,8 @@
     </div>
 </script>
 
-<% include rightMenu %>
+<div class="box-body no-border" id="tree">
+
 <div class="course-control">
     <button class="btn btn-default btn-sm" onclick="Canvas.putOnCenter(true)"><i
             class="ionicons ion-android-locate"></i></button>
@@ -90,6 +91,7 @@
     </div>
 
     <!-- /.modal contents -->
+</div>
 </div>
 
 <script>
