--- a/views/admin-lte/catalogs/nodeDetail.ejs
+++ b/views/admin-lte/catalogs/nodeDetail.ejs
@@ -2,8 +2,8 @@
     <!-- breadcrumb 2nd row -->
     <ol class="breadcrumb">
         <li class="home"><a href="#/cid/{{course._id}}?tab=map&center={{nodeId}}"> &leftarrow;Back &nbsp;&nbsp; {{course.name}}</a></li>
-        <li>Content Node</li>
-        <li class="home"><a href="#/cid/{{course._id}}/nid/{{nodeId}}?tab=preview">{{treeNode.name}}</a></li>
+        <li>Map</li>
+        <li class="home">Content Node : <a href="#/cid/{{course._id}}/nid/{{nodeId}}?tab=preview">{{treeNode.name}}</a></li>
         <li class="active">{{currentTab}}</li>
     </ol>
     <!-- breadcrumb 2nd row -->
