--- a/views/admin-lte/catalogs/courseDetailContentPreview.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentPreview.ejs
@@ -41,13 +41,17 @@
          data-gs-width="12"
          data-gs-locked="yes"
          data-gs-no-resize="yes"
-         ng-repeat="wdg in widgets" id="{{wdg.widgetId._id}}">
+         ng-repeat="wdg in widgets" id="t{{wdg.widgetId._id}}">
         <div class="grid-stack-item-content">
             <div class="box no-shadow">
                 <div class="box-header with-border">
                     <h3 class="box-title">{{wdg.widget}}</h3>
                     <div class="box-tools pull-right">
-                        <button class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove"><i class="fa fa-times"></i></button>
+                        <button class="btn btn-box-tool" data-widget="remove"
+                                data-toggle="tooltip" title="Remove"
+                                ng-click="closeWidget(wdg.widgetId._id);"
+                                >
+                            <i class="fa fa-times"></i></button>
                     </div>
                 </div>
                 <div class="box-body-widget">
