--- a/views/slide-viewer/displayComments.ejs
+++ b/views/slide-viewer/displayComments.ejs
@@ -1,5 +1,5 @@
 
-<!--<% for(var i = 0; i < comments.length; i++) {%>-->
+<% for(var i = 0; i < comments.length; i++) {%>-->
   <div>
     <label><%=comments.author%>(<%=comments.date.toTimeString()%>)</label>
   </div>
