--- a/views/admin-lte/catalogs/nodeDetailContentNodeAnalytics.ejs
+++ b/views/admin-lte/catalogs/nodeDetailContentNodeAnalytics.ejs
@@ -8,7 +8,7 @@
          data-gs-width="12"
          data-gs-locked="yes"
          data-gs-no-resize="yes"
-         ng-repeat="wdg in widgets" id="{{wdg.widgetId._id}}">
+         ng-repeat="wdg in widgets" id="w{{wdg.widgetId._id}}">
         <div class="grid-stack-item-content">
 
             <div class="box no-shadow">
