--- a/views/admin-lte/profile.ejs
+++ b/views/admin-lte/profile.ejs
@@ -58,7 +58,7 @@
                         <div class="grid-stack-item"
                              data-gs-no-resize="yes"
                              data-gs-locked="yes"
-                             ng-repeat="wdg in widgets" id="{{wdg.widgetId._id}}" >
+                             ng-repeat="wdg in widgets" id="w{{wdg.widgetId._id}}" >
                             <div class="grid-stack-item-content">
                                 <div class="box no-shadow">
                                     <div class="box-header with-border">
