--- a/views/admin-lte/catalogs/courseDetailContentAnalytics.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentAnalytics.ejs
@@ -1,14 +1,13 @@
 <!-- analytics-->
-<div id="course-analytics-widgets" class="grid-stack col-xs-12 col-md-3"
+<div id="course-analytics-widgets" class="grid-stack col-xs-12 col-md-11"
      ng-controller="widgetController"
      ng-init="location='course-analytics'">
 
     <div class="grid-stack-item"
-         data-gs-x="0"
-         data-gs-width="12"
          data-gs-locked="yes"
          data-gs-no-resize="yes"
-         ng-repeat="wdg in widgets" id="{{wdg.widgetId._id}}">
+         ng-repeat="wdg in widgets" id="w{{wdg.widgetId._id}}" >
+        <!--on-finish-render="OnAfterWidgetLoadedcourse-analytics"-->
         <div class="grid-stack-item-content">
 
             <div class="box no-shadow">
