move data and option.js to its widget

--- a/views/my-course/courseHistory.ejs
+++ b/views/my-course/courseHistory.ejs
@@ -1,4 +1,8 @@
 
+<!--add statics files from public/my-course/-->
+<script src="/my-course/data.js"></script>
+<script src="/my-course/options.js"></script>
+
         <div>
             <canvas id="courseChart" width="500" height="250" style="margin-left: 40px; margin-right: auto;"></canvas>
         </div>
