--- a/views/admin-lte/catalogs/courseDetailContentAnalytics.ejs
+++ b/views/admin-lte/catalogs/courseDetailContentAnalytics.ejs
@@ -1,7 +1,9 @@
 <!-- analytics-->
 <div id="course-analytics-widgets" class="grid-stack col-xs-12 col-md-11"
      ng-controller="widgetController"
-     ng-init="location='course-analytics'">
+     ng-init="location='course-analytics';
+              initiateDraggableGrid('course-analytics');
+     ">
 
     <div class="grid-stack-item"
          data-gs-locked="yes"
