--- a/views/admin-lte/catalogs/actionBarCourse.ejs
+++ b/views/admin-lte/catalogs/actionBarCourse.ejs
@@ -29,9 +29,10 @@
         </li>
     </ul>
 </script>
+
 <script type="text/ng-template" id="actionBar-course-analytics">
     <ul class="">
-        <li>
+        <li ng-show="isOwner">
             <a style="cursor: pointer;"
                data-toggle="modal" data-target="#widgetGalleryAnalytics"
                title="Add or remove preview widgets">
@@ -39,7 +40,23 @@
         </li>
     </ul>
 </script>
+
 <script type="text/ng-template" id="actionBar-course-map">
     <ul class="">
+        <li ng-show="enrolled || isOwner">
+
+        </li>
+    </ul>
+</script>
+
+<script type="text/ng-template" id="actionBar-course-discussion">
+    <ul class="">
+        <li ng-show="enrolled || isOwner">
+            <a style="cursor: pointer;"
+               data-toggle="modal" data-target="#addNewTopic"
+               title="Add or remove preview widgets">
+            <i class="ionicons ion-android-add"></i> &nbsp; ADD NEW TOPIC</a>
+            </li>
+        </li>
     </ul>
 </script>
